[tool.poetry]
name = "gluonts-workshop"
version = "0.1.8"
description = ""
authors = ["Surat Teerapittayanon <steerapi@gmail.com>"]
readme = "README.md"
packages = [{include = "gluonts_workshop"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
requests = "^2.31.0"
matplotlib = "3.7.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=40.8.0"]
build-backend = "poetry.core.masonry.api"
